--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
         >
           <!--Honeypot-->
           <input type="text" name="_honey" style="display: ;none" />
+
           <!--Disable Captcha-->
-          <input type="hidden" name="_captcha" value="false" />
+          <input
+            type="hidden"
+            name="_captcha"
+            value="false"
+            style="display: ;none"
+          />
+
           <div class="form-group">
             <label for="firstname">firstname</label>
             <input type="text" name="firstname" id="firstname" />
