--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           method="POST"
         >
           <!--Honeypot-->
-          <input type="text" name="_honey" style="display: ;none" />
+          <input type="text" name="_honey" style="display: none" />
 
           <!--Disable Captcha-->
           <input
