--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             type="hidden"
             name="_captcha"
             value="false"
-            style="display: ;none"
+            style="display: none"
           />
 
           <div class="form-group">
